# Stormhacks

./: .gitignore  README.md  dump.rdb  package-lock.json
backend/: AnalyticsService.cpp  AnalyticsService.h  CMakeLists.txt  CardPlaceholder.h  config.json  dockerfile  main.cpp
backend/data/: all_cards.json
backend/include/: AnalyticsService.h  RedisClient.h  models.h  routes.h  services.h
backend/src/: AnalyticsService.cpp  service.cpp
backend/src/utils/: RedisClient.cpp
data/: all_cards.json
scraper/: scrape.py
storm-hacks-2025/: docker-compose.yaml  index.html  package-lock.json  package.json
storm-hacks-2025/backend/: Dockerfile  main.cpp  package-lock.json  package.json  seed.js  server  server.js
storm-hacks-2025/frontend/: README.md  docker-compose.yaml  index.html  package-lock.json  package.json  redis.js
storm-hacks-2025/frontend/src/: App.tsx
storm-hacks-2025/frontend/src/components/: card-scroller.jsx  findcards.jsx  hero.jsx
storm-hacks-2025/src/: App.tsx
storm-hacks-2025/src/components/: app-sidebar.tsx  card-scroller.jsx  hero.jsx
